# applauncher

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: ci.yml
anatomy/: index.html
applauncher/: __init__.py  applauncher.py  configuration.py  event.py  kernel.py  logging.py  service_runner.py
applauncher/cli/: generate.py
applauncher/cli/generate/: bundle.py
docs/: anatomy.md  getting_started.md  index.md  kernel_lifecycle.md
getting_started/: index.html
kernel_lifecycle/: index.html
search/: search_index.json
test/: test_config_loader.py  test_event_manager.py  test_service_runner.py
test/config_assets/: config.yml  config_2.yml  config_3.yml  config_list.yml  parameters.yml  parameters_2.yml  parameters_list.yml
