[tool.poetry]
name = "applauncher"
version = "2.3.0"
description = "Python application launcher"
authors = ["Alvaro Garcia <maxpowel@gmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.6"
blinker = "^1.4"
rich = "^9.10.0"
dependency-injector = "^4.38.0"
pydantic = "^1.7.4"
PyYAML = "^5.4.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
